--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -11,6 +11,13 @@ body {
     padding: 20px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+    .input-container {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        margin-left: 10px;
+    }
 }
 
 input {
@@ -21,6 +28,8 @@ input {
 
 button {
     padding: 10px;
+    font-size: 16px;
+    background-color: rgb(109, 200, 169);
 }
 
 h1,
